# FNA

./: .dockerignore  .eslintignore  .gitignore  .prettierignore  README.md
backend/: .flake8  alembic.ini  pyproject.toml  requirements.txt  setup_database.ps1  setup_database.sql
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_initial_schema.py  0bf43337a0a9_fix_narrative_embeddings_schema.py  20251101_add_updated_at_to_core_tables.py  20251101_update_narrative_analyses_to_model.py  20251102_add_performance_indexes.py  2d307d8695a5_create_batch_jobs_table.py  7423881db09b_add_users_updated_at_column.py  980f6b872ad4_add_company_id_to_narrative_deltas.py  ac636ac1bb29_add_missing_columns_alerts_embeddings.py  c81546f00f10_add_api_key_to_users.py  efab533a171f_add_full_name_to_users.py
backend/docker/: Dockerfile.production  docker-compose.production.yml
backend/docs/: BATCH_PROCESSING.md  CELERY_SETUP.md
backend/scripts/: deploy.ps1  deploy.sh  run_tests.ps1  start_celery_worker.ps1  start_celery_worker.sh  test_arelle.py  test_embeddings.py  test_lm_studio.py  validate_quickstart.py
backend/src/: main.py
backend/src/api/: __init__.py
backend/src/cli/: process_pending_reports.py
backend/src/core/: __init__.py  api_auth.py  cache.py  celery_app.py  config.py  exceptions.py  logging_config.py  metrics.py  model_config.py  security.py  security_utils.py
backend/src/database/: __init__.py  connection.py  vector_setup.py
backend/src/middleware/: rate_limiting.py  subscription_check.py
backend/src/models/: __init__.py  batch_job.py  narrative_delta.py
backend/src/services/: accuracy_validator.py  alert_service.py  batch_processor.py  company_lookup.py  (+9 more)
backend/tests/: conftest.py
(+98 files in other folders)
